# rustorrent

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: release-gate.yml
assets/search_runtime/: helpers.py  socks.py
docs/: DEEP_AUDIT_REPORT_2026-03-20.md  TEST_COVERAGE.md
docs/releases/: v0.1.0-alpha.1.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bencode_parse.rs  http_tracker_parsers.rs  peer_decode_message.rs  storage_paths.rs
macos/: Info.plist  Launcher.swift  build_dmg.sh  create_icon.sh  package_app.sh  rustorrent-launcher
src/: bencode.rs  dht.rs  geoip.rs  http.rs  ip_filter.rs  lpd.rs  main.rs  mse.rs  natpmp.rs  peer.rs  peer_stream.rs  piece.rs  proxy.rs  rss.rs  search.rs  sha1.rs  sha256.rs  storage.rs  torrent.rs  tracker.rs  udp_tracker.rs  ui.rs  upnp.rs  utp.rs  xml.rs
tests/: process_release_gate.rs  soak_swarm.rs
