[package]
name = "rustorrent-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
native-tls = "0.2"

[features]
webseed = []
upnp = []

[[bin]]
name = "bencode_parse"
path = "fuzz_targets/bencode_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "peer_decode_message"
path = "fuzz_targets/peer_decode_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http_tracker_parsers"
path = "fuzz_targets/http_tracker_parsers.rs"
test = false
doc = false
bench = false
